# strick_tech

./: .env.example  .gitignore  CHANGELOG.md  COMPREHENSIVE_REVIEW.md  CONTRIBUTING.md  Dockerfile  FRONTEND_UI_UX_STRATEGIC_REVIEW.md  MACOS_DESKTOP_BUILD_GUIDE.md  PHASE2_COMPLETE.md  PHASE3_COMPLETE.md  PHASE4_COMPLETE.md  README.md  ROADMAP_TO_10.md  SYSTEMATIC_AUDIT_INVENTORY.md  build_macos_desktop.sh  docker-compose.yml  env.example  env.txt  package-lock.json  package.json  pyproject.toml  requirements-test.txt  requirements.txt  run.py  start.bat  start.sh
.github/workflows/: build-macos-dmg.yml  ci.yml
agentic-os/: README.md  ROADMAP_v4.md  config.yaml  requirements.txt  run.py  start.sh
agentic-os/agents/: agents.yaml
agentic-os/backend/: app.py
agentic-os/brain/: Goals.md  README.md
agentic-os/frontend/: error-bridge.js  error-overlay.js  expo_go.js  galaxy.js  index.html  index.html.pre_galaxy  index.html.v3bak  kanban.js  (+7 more)
agents/: agents.yaml
backend/: __init__.py  app.py  config.py  security_auth.py  version.py
benchmarks/: baseline_metrics.json
contracts/: openapi.json
frontend/: index.html  manifest.json  splash.html  styles.css  sw.js
memory/: tts_voice_prefs.json
plugins/: custom_registry.json  installed.json
scripts/: export_openapi.py  run_product_validation.sh  tauri-build.sh  tauri-dev.sh  validate_frontend_api.py
skills/: skills.json
src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
tests/: perf_results.json  pytest.ini
tools/: add_docstrings.py
(+446 files in other folders)
