[package]
name    = "agentic-os"
version = "6.0.0"
edition = "2021"
rust-version = "1.77"

[lib]
name = "agentic_os_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "agentic-os"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri          = { version = "2", features = ["tray-icon", "native-tls"] }
tauri-plugin-shell   = "2"
tauri-plugin-fs      = "2"
tauri-plugin-dialog  = "2"
tauri-plugin-process = "2"
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
tokio      = { version = "1", features = ["full"] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
